--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@ Gdańsk 01.02.23r.
 </ul>
 </td>
 <td align=center>
-<iframe width=650 height=420 name="obszar_glowny" src="glowny_bucia.html" border="0">
- <!-- www.DarmowyLicznik.pl -->
-<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=146325" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
-<!-- END www.DarmowyLicznik.pl -->
- </iframe>
+<iframe width=650 height=420 name="obszar_glowny" src="glowny_bucia.html" border="0"></iframe>
 </td>
 <td width=18% align="center">
  <b>prawe menu</b>
@@ -53,7 +49,11 @@ Gdańsk 01.02.23r.
 </tr>
 <tr>
 <td colspan="3">
-<iframe scrolling="no" width=900 height=90 name="obszar_stopka" src="stopka_bucia.html" border="0"></iframe>
+<iframe scrolling="no" width=900 height=90 name="obszar_stopka" src="stopka_bucia.html" border="0">
+  <!-- www.DarmowyLicznik.pl -->
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=146325" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
+<!-- END www.DarmowyLicznik.pl -->
+ </iframe>
 </td>
 </tr>
 </table>
